--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to("Home", root_path)%></li>
+        <li><%= link_to("Games", games_path)%></li>
+        <li><%= link_to("Signup", new_user_path)%></li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
