--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,5 +1,5 @@
 <% if @game.errors.any? %>
-  <%= render partial: '/errors', locals: {instance: @game}%>
+  <div><%= render partial: '/errors', locals: {instance: @game}%></div>
 <% end %>
 
 <%= form_for @game do |f| %>
