--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @game.title %></h1>
+
 <img src="<%= @game.image %>" alt ="game" style="width:600px;height:600px;">    
 <li>Audience Rating:<%= @game.audience_rating %></li>    
 <li>Release date:<%= @game.release_date %></li>
-<%= link_to "Edit", edit_game_path(@game) %>
+<p><%= link_to "Edit", edit_game_path(@game) %></p>
+
+<%= link_to "Delete",game_path(@game), method: "delete" %>
