--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
         <li><%= link_to("Home", root_path)%></li>
         <li><%= link_to("Games", games_path)%></li>
         <li><%= link_to("Add Game", new_game_path)%></li>
-        <li><%= link_to("Signup", new_user_path)%></li>
+        <li><%= link_to("Signup", signup_path)%></li>
+        <li><%= link_to("Login", new_user_path)%></li>
+        <li><%= link_to("Logout", logout_path)%></li> 
       </ul>
     </nav>
     
