--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,18 @@
-<h1>hello</h1>
+<h1>Login</h1>
+
+<%if @error %>
+    <h1><%= @error %> </h1>
+<% end %>
+
+<%= form_for @user do |f| %>
+    <div>
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+    </div>
+    <div>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+    </div>
+   
+    <%= f.submit "Login" %>
+<% end %>
