--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,15 +4,14 @@
     <h1><%= @error %> </h1>
 <% end %>
 
-<%= form_for @user do |f| %>
-    <div>
-        <%= f.label :username %>
-        <%= f.text_field :username %>
-    </div>
-    <div>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-    </div>
-   
-    <%= f.submit "Login" %>
+<%= form_tag('/users', method: :post) do %>
+  <div>
+    <%= label_tag(:username, "Username") %>
+    <%= text_field_tag :username %>
+  </div>
+  <div>
+   <%= label_tag(:password, "Password") %>
+    <%= password_field_tag :password %>
+  </div>
+  <%= submit_tag("Login") %>
 <% end %>
