updated rating views

--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,2 +1,18 @@
 <h1>Create a Rating</h1>
-<%= render partial: 'form', locals: {rating: @rating, url:game_rating_path(@game), game:@game}%>
+<%= form_for @rating, url:game_ratings_path(@game) do |f| %>
+  <div>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+  </div>
+  <div>
+    <%= f.hidden_field :game_id, :value => @game.id %>
+  </div>
+  <div>
+    <%= f.label :comment %>
+    <%= f.text_area :comment %>
+  </div>
+  <div>
+    <%= f.label :stars %>
+    <%= f.text_area :stars,limit: 5 %>
+  </div>
+  <%= f.submit %>
+<% end %>
