fixed review update

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,12 +5,13 @@
 <img src="<%= @game.image %>" alt ="game" style="width:600px;height:600px;">    
 <li>Audience Rating:<%= @game.audience_rating %></li>    
 <li>Release date:<%= @game.release_date %></li>
-<p><%= link_to "Edit", edit_game_path(@game) %></p>
-
-<%= link_to "Rate Game",new_game_review_path(@game)%>
+<%= link_to "Edit", edit_game_path(@game) %>
 <%= link_to "Delete",game_path(@game), method: "delete" %>
+<br>
+<br>
+<%= link_to "Review Game",new_game_review_path(@game)%>
 <%@game.reviews.each do |r| %>
 <h2> Here are your reviews </h2>
     <h4><%=r.comment%> - <%=r.user.username%> </h4>
-    <%= link_to "Edit a Rating", edit_game_review_path(@game.id,r.id)%>
+    <%= link_to "Edit Review", edit_game_review_path(@game.id,r.id)%>
 <% end %>
