--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>Edit a Review</h1>
-<%= render partial: 'form', locals: {review: @review, url:game_reviews_path(@game), game:@game}%>
+<%= render partial: 'form', locals: {review: @review, url:game_review_path(@game), game:@game}%>
