--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,4 +14,5 @@
 <h2> Here are your reviews </h2>
     <h4><%=r.comment%> - <%=r.user.username%> </h4>
     <%= link_to "Edit Review", edit_game_review_path(@game.id,r.id)%>
+    <%= link_to "Delete Review",game_review_path(@game,r.id), method: "delete" %>
 <% end %>
