--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,14 +5,16 @@
 <img src="<%= @game.image %>" alt ="game" style="width:600px;height:600px;">    
 <li>Audience Rating:<%= @game.audience_rating %></li>    
 <li>Release date:<%= @game.release_date %></li>
-<%= link_to "Edit", edit_game_path(@game) %>
-<%= link_to "Delete",game_path(@game), method: "delete" %>
+<%if logged_in? %>
+    <%= link_to "Edit", edit_game_path(@game) %>
+    <%= link_to "Delete",game_path(@game), method: "delete" %>
 <br>
 <br>
-<%= link_to "Review Game",new_game_review_path(@game)%>
-<%@game.reviews.each do |r| %>
-<h2> Here are your reviews </h2>
-    <h4><%=r.comment%> - <%=r.user.username%> </h4>
-    <%= link_to "Edit Review", edit_game_review_path(@game.id,r.id)%>
-    <%= link_to "Delete Review",game_review_path(@game,r.id), method: "delete" %>
+    <%= link_to "Review Game",new_game_review_path(@game)%>
+    <%@game.reviews.each do |r| %>
+    <h2> Here are your reviews </h2>
+        <h4><%=r.comment%> - <%=r.user.username%> </h4>
+        <%= link_to "Edit Review", edit_game_review_path(@game.id,r.id)%>
+        <%= link_to "Delete Review",game_review_path(@game,r.id), method: "delete" %>
+    <% end %>
 <% end %>
