fixed owned_games view and platforms view

--- a/app/views/owned_games/_form.html.erb
+++ b/app/views/owned_games/_form.html.erb
@@ -2,5 +2,7 @@
 
     <%= f.collection_select :game_id, @games, :id, :title %>
     <%= f.hidden_field :platform_id, :vaule => platform.id %>
-    <%= f.submit %>
+    <%= f.submit " Add to your #{@platform.name} games"%>
+    
+    <p> Can't find your game? add it here <%= link_to("Add a game", new_game_path)%></p>
 <% end %>
