trying to solve session issue

--- a/app/views/platforms/index.html.erb
+++ b/app/views/platforms/index.html.erb
@@ -2,7 +2,7 @@
    
 <ul>
    
-        <% @platform.each do |p|%>
+        <% @platforms.each do |p|%>
             <li><%= link_to p.name, platform_path(p)%></li>
         <%end%>
 
