--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="navbar">
       <ul>
       <% if logged_in? %>
         <li><%= link_to("Home", root_path)%></li>
