updated reviewa index

--- a/app/views/owned_games/_form.html.erb
+++ b/app/views/owned_games/_form.html.erb
@@ -4,5 +4,5 @@
     <%= f.hidden_field :platform_id, :vaule => platform.id %>
     <%= f.submit " Add to your #{@platform.name} games"%>
     
-    <p> Can't find your game? add it here <%= link_to("Add a game", new_game_path)%></p>
+    <p> Can't find your game? add it to our list of games <%= link_to("Add a game", new_game_path)%></p>
 <% end %>
