--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,3 @@
 <h1>GameHub</h1>
 <p> Welcome to Gamehub a tool for organizing and reviewing all the games you own and love.</p>
+<p> Feel free to look at our games list and if you'd like to add games or review games just signup for an account with us. </p>
