--- a/app/views/platforms/index.html.erb
+++ b/app/views/platforms/index.html.erb
@@ -6,7 +6,7 @@
             <li><%= link_to p.name, platform_path(p)%></li>
         <%end%>
 
-        <p><%= link_to("Add a Platform", new_platform_path)%></p>
+        <p><li><%= link_to("Add a Platform", new_platform_path)%></li></p>
 
 
 
