--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,6 +3,6 @@
 
 <ul>
     <% @games.each do |game|%>
-        <li><%= link_to game.title, game_path(game)%>
+        <li><%= link_to game.title, game_path(game)%><li>
     <%end%>
 </ul>
