--- a/app/views/platforms/show.html.erb
+++ b/app/views/platforms/show.html.erb
@@ -5,10 +5,10 @@
 <img src="<%= @platform.image %>" alt ="platform" style="width:600px;height:600px;">    
 <li>Manufacturer:<%= @platform.manufacturer %></li>
 <br>  
-    <%= link_to "Edit Platform", edit_platform_path(@platform) %>
-    <%= link_to "Delete Platform",platform_path(@platform), method: "delete" %>
+    <li><%= link_to "Edit Platform", edit_platform_path(@platform) %></li>
+    <li><%= link_to "Delete Platform",platform_path(@platform), method: "delete" %></li>
 <% end %>
-<%= link_to"Add games you own", new_platform_owned_game_path(@platform)%>
+<li><%= link_to"Add games you own", new_platform_owned_game_path(@platform)%></li>
 <h4> Games you own for this plaform</h4>
 <% @platform.games.map do  |game| %>
      <li><%= link_to game.title, game_path(game) %> </li>
