--- a/app/views/platforms/show.html.erb
+++ b/app/views/platforms/show.html.erb
@@ -10,7 +10,11 @@
 <% end %>
 <li><%= link_to"Add games you own", new_platform_owned_game_path(@platform)%></li>
 <h4> Games you own for this plaform</h4>
-<% @platform.games.map do  |game| %>
-     <li><%= link_to game.title, game_path(game) %> </li>
-    
+<% @platform.games.each do  |game| %>
+     <% @platform.owned_games.each do |og| %>
+        <% if og.game_id == game.id %>
+            <li><%= link_to game.title, game_path(game.id) %> </li> 
+            <li><%= link_to "Remove Game", platform_owned_game_path(@platform, og.id), method: "delete" %></li>
+            <%end%>
+    <% end %>
 <% end %>
