--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -19,6 +19,11 @@ li {
     color: white;
     text-align: left;
 }
+ul {
+    display: block;
+    color: white;
+    
+}
 a {
     display: block;
     color: white;
