--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <ul>
       <li class="search-container">
         <form action="/search">
-          <input type="text" placeholder="Search.." name="q">
+          <input type="text" placeholder="Search for a game" name="q">
           <button type="submit">Search</button>
         </form>
       </li>
